# Cardid

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  run_cardid.bat
benchmarks/: CMakeLists.txt  benchmark_cardid.c
examples/: basic_usage.c
include/: cardid.h
scripts/: build.sh  format.sh  lint.sh
src/: cardid.c  main.c
tests/: CMakeLists.txt  test_cardid.c
